--- a/Practico_An_Sup_SGO_v1.ipynb
+++ b/Practico_An_Sup_SGO_v1.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SebastianOrmaechea/Analisis-Supervisado-Grupo-32/blob/Sebastian-Ormaechea/Practico_An_Sup_SGO_v1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "8vMat4qYuXSG"
       },
       "source": [
@@ -30,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "w9suUi6HuXSK"
       },
@@ -68,13 +78,13 @@
         "df.duplicated().any()"
       ],
       "metadata": {
-        "id": "jSCGpu10ywCi",
-        "outputId": "48159e65-385b-4c49-c706-5d54a9d31b6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jSCGpu10ywCi",
+        "outputId": "48159e65-385b-4c49-c706-5d54a9d31b6d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,22 +102,317 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gfiiMTxiuXSK"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "gfiiMTxiuXSK",
+        "outputId": "ec02cc43-2541-46d9-d554-ac35189bbb0c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   PassengerId HomePlanet CryoSleep     Cabin  Destination   Age    VIP  \\\n",
+              "0         3430     Europa     False   C/123/P  TRAPPIST-1e  57.0  False   \n",
+              "1          669       Mars      True   F/126/S          NaN  18.0  False   \n",
+              "2         8430     Europa      True   B/343/S  TRAPPIST-1e  33.0    NaN   \n",
+              "3         6463      Earth     False  F/1420/P  TRAPPIST-1e  43.0  False   \n",
+              "4           85      Earth     False     G/9/P  TRAPPIST-1e  19.0  False   \n",
+              "\n",
+              "   RoomService  FoodCourt  ShoppingMall    Spa  VRDeck               Name  \n",
+              "0          0.0     3859.0          13.0  195.0  3874.0     Azhah Tronsive  \n",
+              "1          0.0        0.0           0.0    0.0     0.0         Roswal Sha  \n",
+              "2          0.0        0.0           0.0    0.0     0.0  Shaiam Tinganking  \n",
+              "3        142.0     1208.0           0.0    0.0   204.0     Landa Grifford  \n",
+              "4          0.0        0.0         670.0    1.0    34.0     Gracy Dunnisey  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-4d5fe47d-dcd6-4158-8878-a623fbf19253\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PassengerId</th>\n",
+              "      <th>HomePlanet</th>\n",
+              "      <th>CryoSleep</th>\n",
+              "      <th>Cabin</th>\n",
+              "      <th>Destination</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>VIP</th>\n",
+              "      <th>RoomService</th>\n",
+              "      <th>FoodCourt</th>\n",
+              "      <th>ShoppingMall</th>\n",
+              "      <th>Spa</th>\n",
+              "      <th>VRDeck</th>\n",
+              "      <th>Name</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3430</td>\n",
+              "      <td>Europa</td>\n",
+              "      <td>False</td>\n",
+              "      <td>C/123/P</td>\n",
+              "      <td>TRAPPIST-1e</td>\n",
+              "      <td>57.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>3859.0</td>\n",
+              "      <td>13.0</td>\n",
+              "      <td>195.0</td>\n",
+              "      <td>3874.0</td>\n",
+              "      <td>Azhah Tronsive</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>669</td>\n",
+              "      <td>Mars</td>\n",
+              "      <td>True</td>\n",
+              "      <td>F/126/S</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>18.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Roswal Sha</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>8430</td>\n",
+              "      <td>Europa</td>\n",
+              "      <td>True</td>\n",
+              "      <td>B/343/S</td>\n",
+              "      <td>TRAPPIST-1e</td>\n",
+              "      <td>33.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Shaiam Tinganking</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>6463</td>\n",
+              "      <td>Earth</td>\n",
+              "      <td>False</td>\n",
+              "      <td>F/1420/P</td>\n",
+              "      <td>TRAPPIST-1e</td>\n",
+              "      <td>43.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>142.0</td>\n",
+              "      <td>1208.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>204.0</td>\n",
+              "      <td>Landa Grifford</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>85</td>\n",
+              "      <td>Earth</td>\n",
+              "      <td>False</td>\n",
+              "      <td>G/9/P</td>\n",
+              "      <td>TRAPPIST-1e</td>\n",
+              "      <td>19.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>670.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>34.0</td>\n",
+              "      <td>Gracy Dunnisey</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4d5fe47d-dcd6-4158-8878-a623fbf19253')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-4d5fe47d-dcd6-4158-8878-a623fbf19253 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-4d5fe47d-dcd6-4158-8878-a623fbf19253');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ],
       "source": [
+        "# Imputamos los datos faltantes con las respectivas medianas de las columnas\n",
         "imputer_cols = [\"Age\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\" ,\"RoomService\"]\n",
         "imputer = SimpleImputer(strategy=\"median\")\n",
         "df[imputer_cols] = imputer.fit_transform(df[imputer_cols])\n",
         "y = df.Transported\n",
         "X = df.drop('Transported',axis=1)\n",
-        "X"
+        "X.head()"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df"
+        "#Subdividimos la columna Cabin para poder utilizar sus características como variables independientes\n",
+        "X[['Piso','Num', \"Lado\"]] = X.Cabin.str.split('/',expand=True)"
+      ],
+      "metadata": {
+        "id": "fOenn5eI4zjW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convertimos las variables a un dtype conveniente\n",
+        "X[[\"HomePlanet\", \"CryoSleep\", \"Destination\", \"VIP\", 'Piso', \"Lado\"]]  = X[[\"HomePlanet\", \"CryoSleep\", \"Destination\", \"VIP\", 'Piso', \"Lado\"]].astype(\"category\")\n",
+        "X[[\"Num\"]]  = X[[\"Num\"]].astype(\"float\")\n",
+        "X.info()"
+      ],
+      "metadata": {
+        "id": "dNP06e9d3YM_",
+        "outputId": "916a4ce5-4181-4c78-cf66-2fc94eae9d4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 7823 entries, 0 to 7822\n",
+            "Data columns (total 16 columns):\n",
+            " #   Column        Non-Null Count  Dtype   \n",
+            "---  ------        --------------  -----   \n",
+            " 0   PassengerId   7823 non-null   int64   \n",
+            " 1   HomePlanet    7644 non-null   category\n",
+            " 2   CryoSleep     7627 non-null   category\n",
+            " 3   Cabin         7639 non-null   object  \n",
+            " 4   Destination   7663 non-null   category\n",
+            " 5   Age           7823 non-null   float64 \n",
+            " 6   VIP           7639 non-null   category\n",
+            " 7   RoomService   7823 non-null   float64 \n",
+            " 8   FoodCourt     7823 non-null   float64 \n",
+            " 9   ShoppingMall  7823 non-null   float64 \n",
+            " 10  Spa           7823 non-null   float64 \n",
+            " 11  VRDeck        7823 non-null   float64 \n",
+            " 12  Name          7639 non-null   object  \n",
+            " 13  Piso          7639 non-null   category\n",
+            " 14  Num           7639 non-null   float64 \n",
+            " 15  Lado          7639 non-null   category\n",
+            "dtypes: category(6), float64(7), int64(1), object(2)\n",
+            "memory usage: 658.1+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns\n",
+        "X_subset = X[[\"Age\",]]\n",
+        "X_norm = (X_subset-X_subset.mean())/X_subset.std()\n",
+        "plt.figure(figsize=(50,15))\n",
+        "ax = sns.boxplot(data=X_norm)\n",
+        "ax.set_xticklabels(ax.getxticklabels(),rotation=90)\n",
+        "plt.title(u'Representación de cajas de las variables independientes X')\n",
+        "plt.ylabel('Valor de la variable normalizada')\n",
+        "plt.xlabel('Nombre de la variable')"
       ],
       "metadata": {
         "id": "u-GexigLxpZ1"
@@ -962,8 +1267,9 @@
       }
     },
     "colab": {
-      "name": "baseline.ipynb",
-      "provenance": []
+      "name": "Practico_An_Sup_SGO_v1.ipynb",
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
