--- a/Practico_An_Sup_SGO_v2.ipynb
+++ b/Practico_An_Sup_SGO_v2.ipynb
@@ -1614,7 +1614,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Revisamos las variables categóricas antes de aplicar hot encoding\n",
+        "# Revisamos las variables categóricas antes de aplicar la codificación\n",
         "print(x_train[\"HomePlanet\"].value_counts())\n",
         "print(x_train[\"Destination\"].value_counts())\n",
         "print(x_train[\"Piso\"].value_counts())\n",
@@ -1660,7 +1660,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizamos la relación de las variables con el target\n",
+        "# Visualizamos la relación de las variables cuantitativas con el target\n",
         "sns.relplot(y=y, x=X.Age,height=2, aspect=4)\n",
         "sns.relplot(y=y, x=X.RoomService,height=2, aspect=4)\n",
         "sns.relplot(y=y, x=X.FoodCourt,height=2, aspect=4)\n",
@@ -1765,6 +1765,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Visualizamos la relación de las variables categóricas y binarias con el target\n",
         "pd.crosstab(X.HomePlanet,y).plot.bar(stacked=True, figsize=[15,4])\n",
         "pd.crosstab(X.CryoSleep,y).plot.bar(stacked=True, figsize=[15,4])\n",
         "pd.crosstab(X.Destination,y).plot.bar(stacked=True, figsize=[15,4])\n",
@@ -2169,7 +2170,7 @@
       }
     },
     "colab": {
-      "name": "Practico_An_Sup_SGO_v1.ipynb",
+      "name": "Practico_An_Sup_SGO_v2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
