--- a/Practico_An_Sup_SGO_v2.ipynb
+++ b/Practico_An_Sup_SGO_v2.ipynb
@@ -467,7 +467,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Evaluamos presencia de outliers en la variable edad y en las de gastos realizados. No se encuentran outliers\n",
+        "# Evaluamos presencia de outliers en la variable edad y en las de gastos realizados. No se encuentran outliers que impliquen datos erróneos\n",
         "import seaborn as sns\n",
         "plt.figure(figsize=(5,5))\n",
         "sns.boxplot(data=X['Age'])"
@@ -1347,9 +1347,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Escalamos los datos cuantitativos\n",
+        "# Escalamos los datos cuantitativos mediante Robust Scaler para controlar outliers\n",
         "from sklearn import preprocessing\n",
-        "\n",
         "escalador = preprocessing.RobustScaler()\n",
         "x_train[['Age', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']] = escalador.fit_transform(x_train[['Age', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']])\n",
         "x_train.head()"
