Creado mediante Colaboratory

--- a/Practico_An_Sup_SGO_v8.ipynb
+++ b/Practico_An_Sup_SGO_v8.ipynb
@@ -230,7 +230,7 @@
         },
         "outputId": "ec1354de-ad74-4fd7-beea-a0cf20911879"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +490,7 @@
         "id": "jSCGpu10ywCi",
         "outputId": "30ee50a4-4a23-4a6e-9cc0-a7bf7529a4a2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,7 @@
         "id": "ec0wFEiiCQn8",
         "outputId": "a49c44e2-4f21-4df0-c032-2091a78f4b9c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,7 +549,7 @@
         },
         "outputId": "3c83305b-aa97-4c92-cad7-8bed770610d1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +588,7 @@
         "id": "-HhV9Abi7aHv",
         "outputId": "15e09ed3-9466-4e30-876d-7e7f1b6b40a9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -626,7 +626,7 @@
         "id": "6ko62DGG9d7r",
         "outputId": "55202ee4-0bf8-4949-d0da-1a62a8e568b6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -675,7 +675,7 @@
         "id": "sdODGGaS9kVO",
         "outputId": "52ea62dc-7ad0-42af-f2d4-728079f637b1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -723,7 +723,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -776,7 +776,7 @@
         "id": "iRg22N_3-b0G",
         "outputId": "81d431a4-5a24-4d87-888f-9293b74ad203"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +890,7 @@
         "id": "afkgtiiAEfbu",
         "outputId": "fd2d93a3-6534-4672-ca9b-3247b9f4d180"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -926,7 +926,7 @@
         },
         "outputId": "fd4490ec-4417-405b-c0d5-1bdad46c794b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -953,7 +953,7 @@
         "id": "DJ3tgrBc4zMs",
         "outputId": "bd556dc0-6eb9-43eb-fb83-3df2fd5c497e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1225,7 +1225,7 @@
         },
         "outputId": "258a6807-ae47-4c50-814d-8db07a3287c3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,7 +1249,7 @@
         "id": "gxh_AwB4GEsZ",
         "outputId": "82680ee4-9edf-4ce8-b99f-9fbf448566e8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1522,7 +1522,7 @@
         "id": "48IxDnf6BzgK",
         "outputId": "318e9955-c083-4ac6-f0d1-a2e1f58f0692"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1794,7 +1794,7 @@
         "id": "J3DCHydwCOt-",
         "outputId": "0da4bbca-0de2-43a9-acd4-c93e5b3213fc"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1840,7 +1840,7 @@
         "id": "ZvzK8arIQodY",
         "outputId": "d0dc147a-6e22-471f-f642-fc3f819b6e31"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2144,7 +2144,7 @@
         "id": "7IumAPlzNUhV",
         "outputId": "503ee560-d5ec-4ffb-d7d1-b08bfb3a32c8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2193,7 +2193,7 @@
         "id": "p8Fy-ZubkpVh",
         "outputId": "712b2d1c-4f64-4dd4-fb02-85fdef1d3940"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2245,7 +2245,7 @@
         "id": "JEnmq0E-ZZ5s",
         "outputId": "c3425a8f-511f-422e-d0a3-61e0333f22a9"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2550,7 +2550,7 @@
         },
         "outputId": "75b8e005-dd49-4287-c70c-1041051dd9e0"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2608,7 +2608,7 @@
         "id": "xCvN8POhE8B4",
         "outputId": "095280d0-33ab-4cb9-a7d9-241210ec8b08"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2644,7 +2644,7 @@
         "id": "2Ed6flVwA4fl",
         "outputId": "83355758-a064-4f81-c98a-cdb6558c4c2b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2796,7 +2796,7 @@
         "id": "QGv0nsAgA5iu",
         "outputId": "e9626fca-3114-4b78-8832-773897b4c962"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2948,7 +2948,7 @@
         },
         "outputId": "58ff73bd-920a-4b20-e34a-4c2f1d3ebfeb"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3100,7 +3100,7 @@
         },
         "outputId": "855fa3f7-386c-4aa8-ef67-7c882190bc90"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3277,7 +3277,7 @@
         },
         "outputId": "6e313b5c-ff7b-4fb2-c8ea-1998a477fd73"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3291,10 +3291,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.utils.testing import ignore_warnings\n",
-        "from sklearn.exceptions import ConvergenceWarning\n",
-        "with warnings.catch_warnings():\n",
-        "    warnings.filterwarnings(\"ignore\", category=ConvergenceWarning)\n",
         "grids = [sgd_grid,ridge_grid,knn_grid,svc_grid,bag_grid,rf_grid,lr_grid,lgg_grid]\n",
         "col = 0\n",
         "\n",
@@ -3310,7 +3306,7 @@
         "    resul.iloc[5,col] = random_search.score(x_test_hot,y_test)\n",
         "    col += 1\n",
         "    \n",
-        "resul.head()"
+        "resul.style.format(\"{:.3f}\")"
       ],
       "metadata": {
         "id": "SzFcqgMBJXxa"
@@ -3323,7 +3319,7 @@
       "source": [
         "# Luego de las pruebas previas, se decidió trabajar solo con el algoritmo LGB y experimentar con diferentes hiperparámetros\n",
         "# La mejor combinación de hiperparámetros se presenta a continuación y contempla el uso de todas las variables predictoras\n",
-        "BestCaro = lgb.LGBMClassifier(random_state=22,n_estimators=697, boosting_type='gbdt', # PROBAR SEMILLA 519\n",
+        "BestCaro = lgb.LGBMClassifier(random_state=22,n_estimators=697, boosting_type='gbdt', \n",
         "        learning_rate=0.01, num_leaves = 32)\n",
         "                     \n",
         "BestCaro.fit(x_train_hot, y_train)\n",
@@ -3337,7 +3333,7 @@
         "id": "d4w5OephrPkn",
         "outputId": "c69055bf-d089-4c2d-b0dc-a34287eba4bd"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3361,7 +3357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "vbyWeTw0uXSP",
         "colab": {
@@ -3384,7 +3380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "dh-lVYcouXSP",
         "colab": {
@@ -3662,7 +3658,7 @@
         "id": "P3DVlraoeIuP",
         "outputId": "6b99a10c-8a1c-42ae-efeb-82ce703f2276"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3694,7 +3690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "wh3tcdZQuXSQ",
         "colab": {
@@ -3728,7 +3724,7 @@
         },
         "outputId": "6ff2518e-cfb6-489b-b0ad-843136575504"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3741,7 +3737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "VQXsawFcuXSR",
         "colab": {
@@ -3776,7 +3772,7 @@
         "id": "_wmZGWdNiq1e",
         "outputId": "b872728d-ccb8-4645-982b-97928344e134"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
